--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,13 +31,25 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      # 👇 Build steps
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+      - name: Use corepack
+        run: corepack enable
+      - name: Install dependencies
+        run: yarn install --immutable
+      - name: Fetch SDK packages
+        run: yarn prepare
+      - name: Build
+        run: yarn build
+      # 👆 Build steps
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload entire repository
-          path: '.'
+          # 👇 Specify build output path
+          path: dist
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
