--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "globals": "^15.14.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vite-plugin-static-copy": "^3.1.2"
   },
   "packageManager": "yarn@4.6.0"
 }
